--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/TailWorkflowProcessor.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/TailWorkflowProcessor.cshtml
@@ -1,18 +1,22 @@
-@model string[]
+﻿@model string[]
 
 @{
-    Layout = null;
+    ViewBag.Title = "Dash: Tail";
 }
 
-<!DOCTYPE html>
+<h1>Workflow Processor Log tail</h1>
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+<p>Lines: 
+    @Html.ActionLink("100", "TailWorkflowProcessor", "Dash", new { id = "100" }, new { }) |
+    @Html.ActionLink("500", "TailWorkflowProcessor", "Dash", new { id = "500" }, new { }) |
+    @Html.ActionLink("1000", "TailWorkflowProcessor", "Dash", new {id = "1000"}, new {}) | 
+    @Html.ActionLink("View JobProcessor log", "TailJobProcessor", "Dash", new { id = "60" }, new { })</p>
+
+<div class="row">
+    <div class="col-md-12">
+        <p>This log file is at @ViewBag.LogFilePath</p>
+        <pre>
+@string.Join("\r\n", Model)
+        </pre>
+    </div>
 </div>
-</body>
-</html>
