--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Collection.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Collection.cshtml
@@ -1,18 +1,42 @@
-@model Wellcome.Dds.AssetDomain.Dashboard.IDigitisedCollection
+﻿@model IDigitisedCollection
 
 @{
-    Layout = null;
+    ViewBag.Title = "Dash: " + Model.Identifier;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+<div class="row" style="padding-top: 15px">
+    <div class="col-md-12">
+        <h3 style="margin-top: 13px;">@Model.Identifier - @Model.MetsCollection.Label</h3>
+    </div>
 </div>
-</body>
-</html>
+
+<div class="row" style="padding-top: 15px">
+    @if (Model.Collections.HasItems())
+    {
+        <div class="col-md-6">
+            <h4>Collections</h4>
+            <ul class="list-group">
+                @foreach (var coll in Model.Collections)
+                {
+                    <li class="list-group-item">
+                        <a href="@Url.Action("Collection", "Dash", new {id = coll.Identifier})"><span class="glyphicon glyphicon-folder-open"></span> &nbsp;@coll.Identifier: @coll.MetsCollection.Label</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    }
+    @if (Model.Manifestations.HasItems())
+    {
+        <div class="col-md-6">
+            <h4>Manifestations</h4>
+            <ul class="list-group">
+                @foreach (var manif in Model.Manifestations)
+                {
+                    <li class="list-group-item">
+                        <a href="@Url.Action("Manifestation", "Dash", new {id = manif.Identifier})"><span class="glyphicon glyphicon-file"></span> &nbsp;@manif.Identifier: @manif.MetsManifestation.Label</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    }
+</div>
