--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/ManifestationError.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/ManifestationError.cshtml
@@ -1,17 +1,20 @@
-
+﻿
 @{
-    Layout = null;
+    ViewBag.Title = "Manifestation problem";
 }
 
-<!DOCTYPE html>
+<h2>Manifestation problem</h2>
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
+<p><strong>@ViewBag.Message</strong></p>
+
+@if (ViewBag.TryInstead != null)
+{
+    <p>Maybe try @Html.ActionLink((string)ViewBag.TryInstead, "Manifestation", "Dash", new { id = ViewBag.TryInstead }, new { })</p>
+    <p>You can still try to @Html.ActionLink("purge caches for this item", "CacheBust", "Dash", new {id = ViewBag.TryInstead}, new {}).</p>
+
+    <h3>Other tools</h3>
+    <p>@Html.ActionLink("Storage Manifest for " + (string) (ViewBag.DdsId.BNumber), "StorageManifest", new {id = ViewBag.DdsId.BNumber})</p>
+    <p><a href="@Url.Action("XmlView", "Dash", new {id = ViewBag.DdsId.BNumber, parts = ViewBag.DdsId.BNumber + ".xml"})">METS file @(ViewBag.DdsId.BNumber).xml</a></p>
+    <p>@Html.ActionLink("Migration tools", "Migration", new { id = ViewBag.TryInstead })</p>
+}
+
