--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/StorageManifest.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/StorageManifest.cshtml
@@ -1,18 +1,35 @@
-@model Wellcome.Dds.Dashboard.Models.JsonModel
+﻿@model JsonModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Dash: Storage Manifest";
 }
+<style type="text/css" media="screen">
+    #aceView {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 82vh;
+    }
+</style>
+<h1>
+    @Html.ActionLink(Model.BNumber, "Manifestation", "Dash", new { id = Model.BNumber }, new { })
+</h1>
 
-<!DOCTYPE html>
+<div class="row" style="height:100%">
+    <div class="col-md-12">
+        <div id="aceView">@Model.JsonAsString</div>
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+        @Model.ErrorMessage
+    </div>
 </div>
-</body>
-</html>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.1/ace.js"></script>
+<script>
+    var aceView = ace.edit("aceView");
+    aceView.setTheme("ace/theme/chrome");
+    aceView.session.setMode("ace/mode/json");
+</script>
+
+
