--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
@@ -1,18 +1,18 @@
-@model Wellcome.Dds.AssetDomain.Dashboard.BNumberModel
+﻿@model Wellcome.Dds.AssetDomain.Dashboard.BNumberModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Dash: " + Model.DisplayTitle;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+<div class="row" style="margin-top: 1.5em;">
+    <div class="col-sm-12">
+        <a href="#" onclick="window.history.go(-1); return false;">Back to previous page</a>
+    </div>
 </div>
-</body>
-</html>
+
+<div style="margin-top: 2em;">
+
+    <div class="uv" data-config="https://wellcomelibrary.org/assets/config/uv-config.json" data-uri=@(Model.ManifestUrl + "?ts=" + DateTime.Now.Ticks) style="width: 100%; height:700px; background-color: #000"></div>
+    <script type="text/javascript" id="embedUV" src="https://wellcomelibrary.org/spas/uv/top/lib/embed.js"></script>
+
+</div>
