more dashboard tweaks for first run

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -172,7 +172,7 @@
                     <li class="list-group-item">
                         Derivatives:
                         <ul class="list-unstyled">
-                            @foreach (var derivative in Model.GetAVDerivatives())
+                            @foreach (var derivative in Model.AVDerivatives)
                             {
                                 <li>- <a href="@derivative.Id">@derivative.Label</a></li>
                             }
