--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/TailJobProcessor.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/TailJobProcessor.cshtml
@@ -5,17 +5,16 @@
 }
 
 <h1>Job Processor Log tail</h1>
-<p>The DLCS Job Processor last ran @(((TimeSpan)(DateTime.Now - ViewBag.Heartbeat)).ToHumanReadableString()) ago.</p>
-@if (ViewBag.HeartbeatWarning)
-{
-    <p class="danger">This needs investigating!</p>
-}
 
-<p>Lines:
-    @Html.ActionLink("100", "TailJobProcessor", "Dash", new { id = "100" }, new { }) | 
-    @Html.ActionLink("500", "TailJobProcessor", "Dash", new { id = "500" }, new { }) | 
-    @Html.ActionLink("1000", "TailJobProcessor", "Dash", new { id = "1000" }, new { }) | 
-    @Html.ActionLink("View WorkflowProcessor log", "TailWorkflowProcessor", "Dash", new { id = "60"}, new { })</p>
+<partial name="_JobProcessorLastRan" view-data="ViewData" />
+
+<p>
+    Lines:
+    @Html.ActionLink("100", "TailJobProcessor", "Dash", new { id = "100" }, new { }) |
+    @Html.ActionLink("500", "TailJobProcessor", "Dash", new { id = "500" }, new { }) |
+    @Html.ActionLink("1000", "TailJobProcessor", "Dash", new { id = "1000" }, new { }) |
+    @Html.ActionLink("View WorkflowProcessor log", "TailWorkflowProcessor", "Dash", new { id = "60" }, new { })
+</p>
 
 <div class="row">
     <div class="col-md-12">
