--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Settings.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Settings.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.List<System.Collections.Generic.KeyValuePair<string,string>>
+﻿@model SettingsModel
 
 @{
     ViewBag.Title = "Settings";
@@ -6,26 +6,27 @@
 
 <a id="top"></a>
 
-
 <div class="col-md-12">
-    <h3 style="margin: 25px 0 20px 0">Selected application settings</h3>
+    <h3 style="margin: 25px 0 20px 0">Environment AppSettings</h3>
 </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Value</th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var setting in Model)
-    {
-        <tr>
-            <td>@setting.Key</td>
-            <td>@setting.Value</td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-md-12">
+        <pre>
+            @Model.AppSettingsForEnvironment
+        </pre>
+    </div>
+</div>
+
+<div class="col-md-12">
+    <h3 style="margin: 25px 0 20px 0">Base AppSettings</h3>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <pre>
+            @Model.AppSettings
+        </pre>
+    </div>
+</div>
 
