remove migration-related views

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -400,12 +400,14 @@
             }
         }
 
-        <h3>Migration</h3>
+    @*
+    TODO - we can still show ingest history, which is useful
+    <h3>Migration</h3>
         <ul class="list-group">
             <li class="list-group-item">
                 <a href="@Url.Action("Migration", "Dash", new {id = Model.DdsIdentifier.BNumber})"><span class="glyphicon glyphicon-road"></span> Migration report</a>
             </li>
-        </ul>
+        </ul>*@
 
 
     </div>
