taghelper for iiif-image

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -529,13 +529,16 @@
                         @{
                             var thumb24 = Model.GetThumbnail(dlcsImage, 24);
                             var thumb100 = Model.GetThumbnail(dlcsImage, 100);
+                            var fullIIIF = Model.GetIIIFImageService(dlcsImage, "iiif-img");
                         }
-                        @Html.Raw(Model.GetStatusIconForImageRow(dlcsImage, ignored))                        
-                        <img width="@thumb24.Width" height="@thumb24.Height" class="iiifpreview"
+                        @Html.Raw(Model.GetStatusIconForImageRow(dlcsImage, ignored))    
+                        <iiif-thumb small-thumb="thumb24" large-thumb="thumb100" 
+                                    full-iiif-service="fullIIIF" title="pf.GetStoredFileInfo().Uri" />
+                        @*<img width="@thumb24.Width" height="@thumb24.Height" class="iiifpreview"
                              data-src="@thumb24.Src"
                              data-placement="auto"
                              title="@pf.GetStoredFileInfo().Uri<br/><img src='@thumb100.Src' width=@thumb100.Width height=@thumb100.Height />"
-                             data-iiif="@Model.GetIIIFImageService(dlcsImage, "iiif-img")" />
+                             data-iiif="@Model.GetIIIFImageService(dlcsImage, "iiif-img")" />*@
                          <a target="_blank" href="@Model.GetAwsConsoleUri(pf.GetStoredFileInfo().Uri)" title="Find in S3"> S3</a>
                     </td>
                     </tr>
