--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/_ViewImports.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/_ViewImports.cshtml
@@ -12,4 +12,4 @@
 @using Wellcome.Dds.Dashboard.Controllers
 @using Wellcome.Dds.Dashboard.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Wellcome.Dds.Dashboard.TagHelpers
+@addTagHelper *, Wellcome.Dds.Dashboard
