--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@inject IOptions<DdsOptions> DdsOptions
+@{
+    var heartBeat = (DateTime?) ViewBag.Heartbeat;
+    var heartBeatDisplay = $"Job last run: {heartBeat?.ToString("dd/MM/yy HH:mm:ss")}";
+}
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,11 +39,11 @@
                     <li>@Html.ActionLink("Types", "AssetType", "Dash")</li>
                     <li class="@ViewBag.StopClass">@Html.ActionLink("Stop", "StopStatus", new { controller = "Dash" }, new { @class = ViewBag.StopClass })</li>
                 </ul>
-                <p class="nav navbar-text @ViewBag.HeartbeatClass" title="DlcsJobProcessor last run: @ViewBag.Heartbeat">
+                <p class="nav navbar-text @ViewBag.HeartbeatClass" title="@heartBeatDisplay">
                     DLCS Queue: @String.Format("{0}{1}", ViewBag.QueueLevels["incoming"], ViewBag.QueueLevels["priority"] > 0 ? String.Format(" priority:{0}", ViewBag.QueueLevels["priority"]) : String.Empty)
                     @if (ViewBag.HeartbeatWarning)
                     {
-                        <text> | Job last run: @ViewBag.Heartbeat | @Html.ActionLink("Log", "TailJobProcessor", "Dash")</text>
+                        <text> | @heartBeatDisplay | @Html.ActionLink("Log", "TailJobProcessor", "Dash")</text>
                     }
                 </p>
                 @using (Html.BeginForm("ManifestationSearch", "Dash", FormMethod.Post, new { @class = "navbar-form navbar-right", role = "search" }))
