usePathBase for /dash

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Dashboard 2.0</title>
     @* TODO: bundle *@
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <link rel="stylesheet" href="/css/site.css" />
-    <link rel="stylesheet" href="/css/typeahead.css" />
+    <link rel="stylesheet" href="/dash/css/bootstrap.css" />
+    <link rel="stylesheet" href="/dash/css/site.css" />
+    <link rel="stylesheet" href="/dash/css/typeahead.css" />
     @*  TODO - do we actually need this?
         <script src="~/js/modernizr-2.6.2.js" />*@
 </head>
